--- a/_templates/sourcelink.html
+++ b/_templates/sourcelink.html
@@ -13,7 +13,8 @@
     {%- endif %}
 </ul>
 {%- endif %}
-
 <br>
-
-<a href="https://www.vultr.com/?ref=7643832"><img src="https://www.vultr.com/media/banner_4.png" width="160" height="600"></a>
+<a href="https://www.vultr.com/?ref=7643832">
+    <img src="https://www.vultr.com/media/banner_4.png" width="160" height="600">
+</a>
+<br>
